--- a/index.html
+++ b/index.html
@@ -47,9 +47,20 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/erinantonia" target="_blank">Erin</a> and
+          is
+          <a
+            href="https://github.com/erinantonia/Shecodes-git-challenge"
+            target="_blank"
+          >
+            on GitHub</a
+          >
+          and
+          <a
+            href="https://magnificent-kelpie-101710.netlify.app/"
+            target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
